--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "hoal2\n",
-      "2.0\n",
-      "2.0\n"
+      "False\n",
+      "3.0\n",
+      "True\n"
      ]
     }
    ],
@@ -63,25 +62,141 @@
     "\n",
     "decicion = np.empty_like(ubicacion)\n",
     "\n",
-    "#Creo el codigo de toma de deciciones de mi robor\n",
-    "#todas las direcciones  \n",
-    "if ubicacion[0]-1  >= 0 and ubicacion[1]-1 >= 0 and ubicacion[0]+1  < 5 and ubicacion[1]+1 < 5:\n",
+    "print (ubicacion[0]+1 == 5 ^ True)\n",
+    "\n",
+    "#while flood_fill[0][ubicacion[0]][ubicacion[1]] != 0:\n",
+    "    #Creo el codigo de toma de deciciones de mi robor\n",
+    "    #todas las direcciones  \n",
+    "if ubicacion[0]-1  > 0 and ubicacion[1]-1 > 0 and ubicacion[0]+1  < 5 and ubicacion[1]+1 < 5:\n",
+    "    print(\"hola\")\n",
     "    #avanza hacia el este \n",
-    "    print(flood_fill[0][ubicacion[0]+1][ubicacion[1]])\n",
-    "    if flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1 and flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1 or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1 or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1:\n",
+    "    if (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[1]+=1\n",
+    "\n",
+    "    #avanza hacia el norte \n",
+    "    elif (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[2][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[0]-=1\n",
+    "    \n",
+    "    #avanza hacia el oeste \n",
+    "    elif (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[3][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[1]-=1\n",
+    "\n",
+    "    #avanza hacia el sur\n",
+    "    elif (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]+1][ubicacion[1]] and flood_fill[4][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[0]+=1\n",
+    "\n",
+    "#fila superior\n",
+    "elif ubicacion[0]-1 == -1 ^ (ubicacion[1]-1 == -1 or ubicacion[1]+1 == 5):\n",
+    "    #Avanza hacia el este\n",
+    "    if ubicacion[0]-1 == -1 and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[1]+=1\n",
+    "\n",
+    "    #Avanza hacia el oeste\n",
+    "    elif ubicacion[0]-1 == -1 and (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[3][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[1]-=1\n",
+    "\n",
+    "    #Avanza hacia el sur \n",
+    "    elif ubicacion[0]-1 == -1 and (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]+1][ubicacion[1]] and flood_fill[4][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[0]+=1\n",
+    "\n",
+    "#Fila inferior \n",
+    "elif ubicacion[0]+1 == 5 ^ (ubicacion[1]-1 == -1 or ubicacion[1]+1 == 5):\n",
+    "    #Avanza hacia el este\n",
+    "    if ubicacion[0]+1 == 5 and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[1]+=1\n",
+    "\n",
+    "    #Avanza hacia el norte \n",
+    "    elif ubicacion[0]+1 == 5 and (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[2][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[0]-=1\n",
+    "\n",
+    "    #Avanza hacia el oeste  \n",
+    "    elif ubicacion[0]+1 == 5 and (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[3][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "        ubicacion[1]-=1\n",
+    "\n",
+    "#Columna izquierda\n",
+    "elif ubicacion[1]-1 == -1:\n",
+    "    #fuera de las esquinas\n",
+    "    if ubicacion[0]-1 >= 0 and ubicacion[0]+1 <= 4:\n",
+    "        print(\"hola\")\n",
+    "        #Avanza hacia el este\n",
+    "        if (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[1]+=1\n",
+    "\n",
+    "        #Avanza hacia el norte\n",
+    "        elif (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[2][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[0]-=1\n",
+    "\n",
+    "        #Avanza hacia el sur \n",
+    "        elif (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]+1][ubicacion[1]] and flood_fill[4][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[0]+=1\n",
+    "\n",
+    "    #Esquina superior \n",
+    "    elif ubicacion[0]-1 == -1:\n",
+    "        #avanza hacie el este\n",
+    "        if (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[1]+=1\n",
+    "\n",
+    "        #Avanza hacia el sur \n",
+    "        elif (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]+1][ubicacion[1]] and flood_fill[4][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[0]+=1\n",
+    "\n",
+    "    #Esquina inferior \n",
+    "    elif ubicacion[0]+1 == 5:\n",
+    "        #avanza hacia el este \n",
+    "        if (flood_fill[0][ubicacion[0]][ubicacion[1]+1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]+1] and flood_fill[1][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[1]+=1\n",
+    "\n",
+    "        #Avanza hacia el norte\n",
+    "        elif (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]+1] or flood_fill[1][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[2][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[0]-=1\n",
+    "\n",
+    "#Columna derecha \n",
+    "elif ubicacion[1]+1 == 5:\n",
+    "    #fuera de esquinas\n",
+    "    if ubicacion[0]-1 >= 0 and ubicacion[0]+1 <= 4:\n",
+    "        print(\"hola1\")\n",
+    "        #Avanza hacia el norte\n",
+    "        if (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[2][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            print(\"hola\")\n",
+    "            ubicacion[0]-=1\n",
+    "            print(ubicacion[0])\n",
     "        \n",
-    "        ubicacion[1]=ubicacion[1]+1\n",
-    "        print(flood_fill[0][ubicacion[0]][ubicacion[1]])\n",
+    "        #Avanza hacia el oeste \n",
+    "        elif (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[3][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[1]-=1\n",
     "\n",
+    "        #Avanza hacia el sur\n",
+    "        elif (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]+1][ubicacion[1]] and flood_fill[4][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[0]+=1\n",
+    "    \n",
+    "    #esquina superior \n",
+    "    if ubicacion[0]-1 == -1:\n",
+    "        #Avanza hacia el oeste\n",
+    "        if (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]+1][ubicacion[1]] or flood_fill[4][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[3][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[1]-=1\n",
+    "        #Avanza hacia el sur\n",
+    "        elif (flood_fill[0][ubicacion[0]+1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]+1][ubicacion[1]] and flood_fill[4][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[0]+=1\n",
+    "    \n",
+    "    #Esquina inferior \n",
+    "    if ubicacion[0]+1 == 5:\n",
+    "        #avanza hacia el oeste \n",
+    "        if (flood_fill[0][ubicacion[0]][ubicacion[1]-1] < flood_fill[0][ubicacion[0]-1][ubicacion[1]] or flood_fill[2][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]][ubicacion[1]-1] and flood_fill[3][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[1]-=1\n",
     "\n",
+    "        #Avanza hacia el norte \n",
+    "        elif (flood_fill[0][ubicacion[0]-1][ubicacion[1]] < flood_fill[0][ubicacion[0]][ubicacion[1]-1] or flood_fill[3][ubicacion[0]][ubicacion[1]] == 1) and flood_fill[0][ubicacion[0]][ubicacion[1]] > flood_fill[0][ubicacion[0]-1][ubicacion[1]] and flood_fill[2][ubicacion[0]][ubicacion[1]] != 1:\n",
+    "            ubicacion[0]-=1\n",
     "print(flood_fill[0][ubicacion[0]][ubicacion[1]])\n",
+    "print(ubicacion[0]-1 >= 0 and ubicacion[0]+1 <= 4)\n",
+    "    \n",
     "#print(flood_fill[0])\n",
     "#print(flood_fill[1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +208,7 @@
       " [ 8.  9.  0.  1.  2.]\n",
       " [ 9.  8.  9. 10.  3.]\n",
       " [10.  7.  6.  5.  4.]]\n",
-      "[0. 0. 0. 0. 0.]\n"
+      "False\n"
      ]
     }
    ],
@@ -104,13 +219,13 @@
     "    flood_fill[0] = np.loadtxt(csv_file,delimiter=\";\")\n",
     "    print(flood_fill[0])\n",
     "aux=np.array([0,1])\n",
-    "print(flood_fill[0+1][aux[0+1]])\n"
+    "print(True ^ True)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -124,12 +239,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "58837b1b657ea91009af8409fc244ae3b5ccf93ea980d6fb6b80adc5f697f4cc"
+    "hash": "c28da407b5413b3940d87ecdae5ea8ce0c2929d84f560e9f5daaaa2573d53e68"
    }
   }
  },
