--- a/EntregaMC12/mini_challenge#12.ipynb
+++ b/EntregaMC12/mini_challenge#12.ipynb
@@ -137,27 +137,312 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Acer\\AppData\\Local\\Temp\\ipykernel_6904\\2017306498.py:4: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  media=boston.mean(numeric_only=None)\n",
-      "C:\\Users\\Acer\\AppData\\Local\\Temp\\ipykernel_6904\\2017306498.py:5: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
-      "  mediana=boston.median(numeric_only=None)\n"
+      "Media:\n",
+      "CRIM         3.613524\n",
+      "ZN          11.363636\n",
+      "INDUS       11.136779\n",
+      "NOX          0.554695\n",
+      "RM           6.284634\n",
+      "AGE         68.574901\n",
+      "DIS          3.795043\n",
+      "RAD          9.549407\n",
+      "TAX        408.237154\n",
+      "PTRATIO     18.455534\n",
+      "B          356.674032\n",
+      "LSTAT       12.653063\n",
+      "MEDV        22.528854\n",
+      "dtype: float64\n",
+      "Mediana:\n",
+      "CRIM         0.00632\n",
+      "ZN          18.00000\n",
+      "INDUS        2.31000\n",
+      "NOX          0.53800\n",
+      "RM           6.57500\n",
+      "AGE         65.20000\n",
+      "DIS          4.09000\n",
+      "RAD          1.00000\n",
+      "TAX        296.00000\n",
+      "PTRATIO     15.30000\n",
+      "B          396.90000\n",
+      "LSTAT        4.98000\n",
+      "MEDV        24.00000\n",
+      "dtype: float64\n",
+      "Moda:\n",
+      "       CRIM   ZN  INDUS    NOX     RM    AGE     DIS   RAD    TAX  PTRATIO  \\\n",
+      "0   0.01501  0.0   18.1  0.538  5.713  100.0  3.4952  24.0  666.0     20.2   \n",
+      "1  14.33370  NaN    NaN    NaN  6.127    NaN     NaN   NaN    NaN      NaN   \n",
+      "2       NaN  NaN    NaN    NaN  6.167    NaN     NaN   NaN    NaN      NaN   \n",
+      "3       NaN  NaN    NaN    NaN  6.229    NaN     NaN   NaN    NaN      NaN   \n",
+      "4       NaN  NaN    NaN    NaN  6.405    NaN     NaN   NaN    NaN      NaN   \n",
+      "5       NaN  NaN    NaN    NaN  6.417    NaN     NaN   NaN    NaN      NaN   \n",
+      "\n",
+      "       B  LSTAT  MEDV  \n",
+      "0  396.9   6.36  50.0  \n",
+      "1    NaN   7.79   NaN  \n",
+      "2    NaN   8.05   NaN  \n",
+      "3    NaN  14.10   NaN  \n",
+      "4    NaN  18.13   NaN  \n",
+      "5    NaN    NaN   NaN  \n",
+      "STD:\n",
+      "         CRIM         ZN     INDUS       NOX        RM        AGE      DIS  \\\n",
+      "std  8.601545  23.322453  6.860353  0.115878  0.702617  28.148861  2.10571   \n",
+      "\n",
+      "          RAD         TAX   PTRATIO          B     LSTAT      MEDV  \n",
+      "std  8.707259  168.537116  2.164946  91.294864  7.141062  9.182176  \n",
+      "Percentiles\n",
+      "          CRIM     ZN  INDUS    NOX      RM      AGE        DIS   RAD    TAX  \\\n",
+      "min   0.006320    0.0   0.46  0.385  3.5610    2.900   1.129600   1.0  187.0   \n",
+      "25%   0.082045    0.0   5.19  0.449  5.8855   45.025   2.100175   4.0  279.0   \n",
+      "50%   0.256510    0.0   9.69  0.538  6.2085   77.500   3.207450   5.0  330.0   \n",
+      "75%   3.677083   12.5  18.10  0.624  6.6235   94.075   5.188425  24.0  666.0   \n",
+      "max  88.976200  100.0  27.74  0.871  8.7800  100.000  12.126500  24.0  711.0   \n",
+      "\n",
+      "     PTRATIO         B   LSTAT    MEDV  \n",
+      "min    12.60    0.3200   1.730   5.000  \n",
+      "25%    17.40  375.3775   6.950  17.025  \n",
+      "50%    19.05  391.4400  11.360  21.200  \n",
+      "75%    20.20  396.2250  16.955  25.000  \n",
+      "max    22.00  396.9000  37.970  50.000  \n"
      ]
     }
    ],
    "source": [
+    "#leo el archivo a interpretar \n",
     "pd.set_option('display.max_rows', None) \n",
     "boston = pd.read_excel('archivos/boston_dataset.xlsx')\n",
-    "boston.describe()\n",
-    "media=boston.mean(numeric_only=None)\n",
-    "mediana=boston.median(numeric_only=None)\n",
-    "moda=boston.mode(numeric_only=None)"
+    "\n",
+    "#Calculo estadisticas descriptivas\n",
+    "media=boston.iloc[:,1:].mean()\n",
+    "mediana=boston.iloc[:1:].median(skipna=True,numeric_only=True)\n",
+    "moda=boston.iloc[:,1:].mode()\n",
+    "describe = boston.describe()\n",
+    "\n",
+    "#muestro la informacion\n",
+    "print(f\"Media:\\n{media}\\nMediana:\\n{mediana}\\nModa:\\n{moda}\\n\")\n",
+    "print(f\"STD:\\n{describe.iloc[2:3,:]}\\n\")\n",
+    "print(f\"Percentiles\\n{describe.iloc[3:,:]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CRIM</th>\n",
+       "      <th>ZN</th>\n",
+       "      <th>INDUS</th>\n",
+       "      <th>NOX</th>\n",
+       "      <th>RM</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>DIS</th>\n",
+       "      <th>RAD</th>\n",
+       "      <th>TAX</th>\n",
+       "      <th>PTRATIO</th>\n",
+       "      <th>B</th>\n",
+       "      <th>LSTAT</th>\n",
+       "      <th>MEDV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "      <td>506.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.613524</td>\n",
+       "      <td>11.363636</td>\n",
+       "      <td>11.136779</td>\n",
+       "      <td>0.554695</td>\n",
+       "      <td>6.284634</td>\n",
+       "      <td>68.574901</td>\n",
+       "      <td>3.795043</td>\n",
+       "      <td>9.549407</td>\n",
+       "      <td>408.237154</td>\n",
+       "      <td>18.455534</td>\n",
+       "      <td>356.674032</td>\n",
+       "      <td>12.653063</td>\n",
+       "      <td>22.528854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>8.601545</td>\n",
+       "      <td>23.322453</td>\n",
+       "      <td>6.860353</td>\n",
+       "      <td>0.115878</td>\n",
+       "      <td>0.702617</td>\n",
+       "      <td>28.148861</td>\n",
+       "      <td>2.105710</td>\n",
+       "      <td>8.707259</td>\n",
+       "      <td>168.537116</td>\n",
+       "      <td>2.164946</td>\n",
+       "      <td>91.294864</td>\n",
+       "      <td>7.141062</td>\n",
+       "      <td>9.182176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.006320</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.460000</td>\n",
+       "      <td>0.385000</td>\n",
+       "      <td>3.561000</td>\n",
+       "      <td>2.900000</td>\n",
+       "      <td>1.129600</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>187.000000</td>\n",
+       "      <td>12.600000</td>\n",
+       "      <td>0.320000</td>\n",
+       "      <td>1.730000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.082045</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.190000</td>\n",
+       "      <td>0.449000</td>\n",
+       "      <td>5.885500</td>\n",
+       "      <td>45.025000</td>\n",
+       "      <td>2.100175</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>279.000000</td>\n",
+       "      <td>17.400000</td>\n",
+       "      <td>375.377500</td>\n",
+       "      <td>6.950000</td>\n",
+       "      <td>17.025000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.256510</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.690000</td>\n",
+       "      <td>0.538000</td>\n",
+       "      <td>6.208500</td>\n",
+       "      <td>77.500000</td>\n",
+       "      <td>3.207450</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>330.000000</td>\n",
+       "      <td>19.050000</td>\n",
+       "      <td>391.440000</td>\n",
+       "      <td>11.360000</td>\n",
+       "      <td>21.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>3.677083</td>\n",
+       "      <td>12.500000</td>\n",
+       "      <td>18.100000</td>\n",
+       "      <td>0.624000</td>\n",
+       "      <td>6.623500</td>\n",
+       "      <td>94.075000</td>\n",
+       "      <td>5.188425</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>666.000000</td>\n",
+       "      <td>20.200000</td>\n",
+       "      <td>396.225000</td>\n",
+       "      <td>16.955000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>88.976200</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>27.740000</td>\n",
+       "      <td>0.871000</td>\n",
+       "      <td>8.780000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>12.126500</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>711.000000</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>396.900000</td>\n",
+       "      <td>37.970000</td>\n",
+       "      <td>50.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             CRIM          ZN       INDUS         NOX          RM         AGE  \\\n",
+       "count  506.000000  506.000000  506.000000  506.000000  506.000000  506.000000   \n",
+       "mean     3.613524   11.363636   11.136779    0.554695    6.284634   68.574901   \n",
+       "std      8.601545   23.322453    6.860353    0.115878    0.702617   28.148861   \n",
+       "min      0.006320    0.000000    0.460000    0.385000    3.561000    2.900000   \n",
+       "25%      0.082045    0.000000    5.190000    0.449000    5.885500   45.025000   \n",
+       "50%      0.256510    0.000000    9.690000    0.538000    6.208500   77.500000   \n",
+       "75%      3.677083   12.500000   18.100000    0.624000    6.623500   94.075000   \n",
+       "max     88.976200  100.000000   27.740000    0.871000    8.780000  100.000000   \n",
+       "\n",
+       "              DIS         RAD         TAX     PTRATIO           B       LSTAT  \\\n",
+       "count  506.000000  506.000000  506.000000  506.000000  506.000000  506.000000   \n",
+       "mean     3.795043    9.549407  408.237154   18.455534  356.674032   12.653063   \n",
+       "std      2.105710    8.707259  168.537116    2.164946   91.294864    7.141062   \n",
+       "min      1.129600    1.000000  187.000000   12.600000    0.320000    1.730000   \n",
+       "25%      2.100175    4.000000  279.000000   17.400000  375.377500    6.950000   \n",
+       "50%      3.207450    5.000000  330.000000   19.050000  391.440000   11.360000   \n",
+       "75%      5.188425   24.000000  666.000000   20.200000  396.225000   16.955000   \n",
+       "max     12.126500   24.000000  711.000000   22.000000  396.900000   37.970000   \n",
+       "\n",
+       "             MEDV  \n",
+       "count  506.000000  \n",
+       "mean    22.528854  \n",
+       "std      9.182176  \n",
+       "min      5.000000  \n",
+       "25%     17.025000  \n",
+       "50%     21.200000  \n",
+       "75%     25.000000  \n",
+       "max     50.000000  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boston.describe()"
    ]
   }
  ],
