segui trabajandi en el maze solver

--- a/EntregaMC12/mini_challenge#12.ipynb
+++ b/EntregaMC12/mini_challenge#12.ipynb
@@ -131,7 +131,7 @@
     "promedio_clase3=float(aux_promedio3/aux_vivos3)\n",
     "\n",
     "#muestro en pantalla los resultados\n",
-    "print(f\"Muertos por clase:\\nPrimera clase-{aux_vivos1}\\nSegunda clase-{aux_vivos2}\\nTercera clase-{aux_vivos3}\\nHombres-%{Hombres:.2f}\\nMujeres-%{Mujeres:.2f}\\nTrifa promedio por clase:\\nPrimera clase-${promedio_calse1:.2f}\\nSegunda clase-${promedio_clase2:.2f}\\nTercera clase-${promedio_clase3:.2f}\")\n",
+    "print(f\"Vivos por clase:\\nPrimera clase-{aux_vivos1}\\nSegunda clase-{aux_vivos2}\\nTercera clase-{aux_vivos3}\\nHombres-%{Hombres:.2f}\\nMujeres-%{Mujeres:.2f}\\nTrifa promedio por clase:\\nPrimera clase-${promedio_calse1:.2f}\\nSegunda clase-${promedio_clase2:.2f}\\nTercera clase-${promedio_clase3:.2f}\")\n",
     "\n"
    ]
   },
