--- a/Trabajo FInal/maze_solver_robot.ipynb
+++ b/Trabajo FInal/maze_solver_robot.ipynb
@@ -4,14 +4,15 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Primero, hice una tabla con distintos modelos de los componentes de mi proyecto para asi hacer varias rutas y ver cual de todas es la mejor en terminos de facilidad y economia. Apoyandome de ChatGPT, claro esta."
-   ]
+   "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Primero, estuve mirando varias formas de navegacion autonoma para que mi robot resolviera el laberinto, desde inteligencia articifial hasta varios algoritmos. Al final, llegue a la conclusion de que lo que mas se ajustaba debido al tiempo y mis habilidades era el famoso algoritmo flood fill; con esto, vinieron varios retos y sin lugar a dudas el que mas me costo superar era la logica que implementaba este algoritmo, ya que era muy comleja y nunca me habia enfrentado a un proyecto de esta magnitud. Sin embargo, despues de leer varias tesis que usaban este algoritmo, por fin di con la que, segun yo, explicaba de manera sencilla basicamente que trataba el codigo. Luego de saber por donde iba el codigo, me di en la tarea de ver varios ejemplos de proyectos que ya lo habian utilizado para saber que sensores y meconismos iba a utilizar; gracias a dicha busqueda decidi utilisar solo motores y un sensor tipo seguidor de linea, ya que los otros teian un nivel mucho mas avanzados con respecto a su programacion, ademas de que se me subian mucho los precios para realizar el proyecto. Cuando decidí que sensores utilizar, me di en la tarea de programar el algoritmo tipo flood fill"
+   ]
   },
   {
    "cell_type": "code",
@@ -204,38 +205,19 @@
     "    if flood_fill[0][ubicacion[0]][ubicacion[1]] == 0:\n",
     "        print(\"fin\")\n",
     "                \n",
-    "    print(flood_fill[0][ubicacion[0]][ubicacion[1]])\n",
-    "    \n",
-    "#print(flood_fill[0])\n",
-    "#print(flood_fill[1:])"
+    "    print(flood_fill[0][ubicacion[0]][ubicacion[1]])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 6.  5.  4.  5.  4.]\n",
-      " [ 7.  6.  3.  2.  3.]\n",
-      " [ 8.  9.  0.  1.  2.]\n",
-      " [ 9.  8.  9. 10.  3.]\n",
-      " [10.  7.  6.  5.  4.]]\n",
-      "False\n"
-     ]
-    }
-   ],
    "source": [
+    "Cuando tuve listo el algoritmo, el siguente paso fue, ocn la ayuda de ChatGPT, armas la matriz morfologica para el hardware de mi robot, teniendo en cuenta costos y dimensiones.\n",
     "\n",
-    "flood_fill = np.zeros((5,5,5))\n",
-    "with open('archivos_csv/posiciones.csv','r') as csv_file:\n",
-    "    flood_fill[0] = np.loadtxt(csv_file,delimiter=\";\")\n",
-    "    print(flood_fill[0])\n",
-    "aux=np.array([0,1])\n",
-    "print(True ^ True)\n"
+    "<img src=\"img/sensor.jpg\"\n",
+    "     width=\"600\"\n",
+    "     height=\"300\">"
    ]
   }
  ],
