--- a/EntregaMC12/mini_challenge#12.ipynb
+++ b/EntregaMC12/mini_challenge#12.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Muertos por clase:\n",
+      "Vivos por clase:\n",
       "Primera clase-136\n",
       "Segunda clase-87\n",
       "Tercera clase-119\n",
@@ -50,7 +50,8 @@
       "Trifa promedio por clase:\n",
       "Primera clase-$95.61\n",
       "Segunda clase-$22.06\n",
-      "Tercera clase-$13.69\n"
+      "Tercera clase-$13.69\n",
+      "109\n"
      ]
     }
    ],
